Section about finished.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!------ CSS ------->
     <link rel="stylesheet" href="./resources/css/settings.css" />
     <link rel="stylesheet" href="./resources/css/general.css" />
+    <link rel="stylesheet" href="./resources/css/layout.css" />
     <link rel="stylesheet" href="./resources/css/style.css" />
   </head>
   <body>
@@ -63,5 +64,62 @@
         <a href="#section-gallery" class="btn btn--reverse">Zeige mir mehr</a>
       </div>
     </header>
+
+    <main>
+      <!-- ****************** SECTION ABOUT ************************* -->
+      <section class="section-about" id="section-about">
+        <div class="container margin-bottom-big">
+          <h2 class="heading-secondary">Sehr verehrte Gäste!</h2>
+          <p class="description-text">
+            Unser Restaurant mit seinem reichaltigen angebot an speisen und
+            getränken lädt sie herzlich ein.
+          </p>
+        </div>
+
+        <div class="container grid grid--3-cols">
+          <!-- FEATURE 1 -->
+          <!-- FEATURE 1 -->
+          <div class="feature">
+            <i class="fas fa-utensils feature-icon"></i>
+            <p class="feature-title">Leckeres essen</p>
+            <p class="feature-text">
+              Im El Rancho erwarten Sie viel mehr als nur Steaks und die
+              üblichen Beilagen. Wir bieten Ihnen zudem je nach Saison,
+              besondere Spezialitäten auf einer Extrakarte an. Frische
+              Zubereitung und die Qualität der Speisen stehen bei uns an
+              oberster Stelle. Wir möchten, dass Sie sich bei uns wohlfühlen!
+              Hierzu gehört bei uns nicht nur die beste Qualität, sondern auch
+              eine freundliche, kompetente und zuvorkommende Bedienung sowie
+              eine gepflegte und gemütliche Atmosphäre.
+            </p>
+          </div>
+
+          <!-- FEATURE 2-->
+          <div class="feature">
+            <i class="fas fa-glass-cheers feature-icon"></i>
+            <p class="feature-title">Festliche Anlässe</p>
+            <p class="feature-text">
+              Festliche Anlässe begeht man am besten dort, wo elegante Räume zur
+              Verfügung stehen und wo Ihnen ein Service geboten wird, der jede
+              Feier zu einem unvergesslichen Erlebnis macht. Ob Hochzeit,
+              Kommunion, Konfirmation, Geburtstag oder Jubiläum, für jede
+              Festlichkeit bieten wir den richtigen Rahmen (bis zu 40 Personen).
+              Wir servieren das passende Buffet dazu. Lassen Sie sich
+              unverbindlich beraten.
+            </p>
+          </div>
+          <!-- FEATURE 3-->
+          <div class="feature">
+            <i class="fas fa-car feature-icon"></i>
+            <p class="feature-title">Catering Service</p>
+            <p class="feature-text">
+              Sie haben eine Räumlichkeit für Ihr Fest, wissen aber nicht, wie
+              sie Ihre Gäste versorgen sollen? Dann ist unser Catering-Service
+              genau das Richtige für Sie. Wir liefern das Buffet zu Ihnen!
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
