Section gallery finished.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,47 @@
           </div>
         </div>
       </section>
+      <!-- ****************** SECTION GALLERY ************************* -->
+      <section class="section-gallery" id="section-gallery">
+        <div class="gallery">
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-1.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-2.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-3.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-4.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-5.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-6.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-7.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-8.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-9.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-10.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-11.png" alt="" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="./resources/img/gallery-12.png" alt="" />
+          </figure>
+        </div>
+      </section>
     </main>
   </body>
 </html>
