Finished desktop site.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,216 @@
           </figure>
         </div>
       </section>
+      <!-- ****************** SECTION MENU ************************* -->
+      <section class="section-menu" id="section-menu">
+        <div class="container margin-bottom-big">
+          <h2 class="heading-secondary">Unsere Speisekarte!</h2>
+          <p class="description-text">
+            Bestimmt finden Sie etwas, worauf Sie sich bei einem Besuch in
+            unserem Steakhaus freuen können.
+          </p>
+        </div>
+
+        <div class="container grid grid--3-cols">
+          <!-- CARD 1 -->
+          <div class="card">
+            <div class="meal">
+              <p class="meal-title">Bife Ancho</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">250 g 22,50€</li>
+                <li class="meal-attribute">350 g 28,50€</li>
+                <li class="meal-attribute">450 g 33,90€</li>
+              </ul>
+            </div>
+
+            <div class="meal">
+              <p class="meal-title">Steak "Florida"</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">16,50€</li>
+              </ul>
+            </div>
+            <div class="meal">
+              <p class="meal-title">Pfefferspieß</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">250 g 19,90€</li>
+              </ul>
+            </div>
+            <div class="center-text">
+              <a
+                class="btn btn--primary"
+                target="_blank"
+                href="./resources/attachment/speisekarte.pdf"
+                >Komplette Karte</a
+              >
+            </div>
+            <span class="card-mark card-mark--1">Speisekarte</span>
+          </div>
+
+          <!-- CARD 2 -->
+          <div class="card">
+            <div class="meal">
+              <p class="meal-title">Rinderspieß</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">170 g 13,50€</li>
+              </ul>
+            </div>
+
+            <div class="meal">
+              <p class="meal-title">El Rancho Burger</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">200 g 12,90€</li>
+              </ul>
+            </div>
+            <div class="meal">
+              <p class="meal-title">Zwiebel-Hüftsteak</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">160 g 13,50€</li>
+                <li class="meal-attribute">&nbsp;</li>
+                <li class="meal-attribute">&nbsp;</li>
+              </ul>
+            </div>
+            <div class="center-text">
+              <a
+                class="btn btn--secondary"
+                target="_blank"
+                href="./resources/attachment/mittagskarte.pdf"
+                >Komplette Karte</a
+              >
+            </div>
+            <span class="card-mark card-mark--2">Mittagskarte</span>
+          </div>
+
+          <!-- CARD 3 -->
+          <div class="card">
+            <div class="meal">
+              <p class="meal-title">Hüftsteak</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">200 g 22,90€</li>
+                <li class="meal-attribute">300 g 28,90€</li>
+              </ul>
+            </div>
+
+            <div class="meal">
+              <p class="meal-title">Rinderfilet</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">200 g 28,50€</li>
+                <li class="meal-attribute">300 g 34,50€</li>
+              </ul>
+            </div>
+
+            <div class="meal">
+              <p class="meal-title">Kalbssteak</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">20,50€</li>
+              </ul>
+            </div>
+
+            <div class="center-text">
+              <a
+                href="./resources/attachment/pfifferlingskarte.pdf"
+                target="_blank"
+                class="btn btn--tertiary"
+                >Komplette Karte</a
+              >
+            </div>
+            <span class="card-mark card-mark--3">Pfifferlingskarte</span>
+          </div>
+        </div>
+      </section>
+      <!--***************** SECTION APPROACH ****************************** -->
+      <section class="section-approach" id="section-approach">
+        <div class="container margin-bottom-big">
+          <h2 class="heading-secondary">Ihr weg zu uns!</h2>
+          <p class="description-text">
+            Schenkelstraße 2, 52349 Düren. Sie können uns täglich von 11:30 bis
+            14:30 Uhr und von 17:30 bis 22:00 Uhr besuchen kommen.
+          </p>
+        </div>
+
+        <div class="container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2521.480532918234!2d6.477837815468073!3d50.80373496972713!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bf68457e6df939%3A0xced159620a911c5a!2sSteakhouse%20El%20Rancho!5e0!3m2!1sen!2sba!4v1629223821411!5m2!1sen!2sba"
+            class="map"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </div>
+      </section>
+      <!--***************** SECTION CTA ****************************** -->
+      <section class="section-cta" id="section-cta">
+        <div class="container margin-bottom-big">
+          <h2 class="heading-secondary">Wir sind für Sie da!</h2>
+          <p class="description-text">
+            Liebe Gäste, rufen Sie uns an oder schicken Sie uns eine E-mail wenn
+            Sie Tisch-Reservierung beantragen, oder Essen zum abholen bestellen
+            wollen. Tel: 0242113749. Email: info@elrancho-dueren.de.
+          </p>
+        </div>
+
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">
+              <form
+                class="form"
+                action="https://formspree.io/f/mpzkorrb"
+                method="POST"
+              >
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input
+                    name="name"
+                    type="text"
+                    id="name"
+                    placeholder="Georg Schmidt"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input
+                    name="email"
+                    type="email"
+                    id="email"
+                    placeholder="me@example.com"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="message">Ihre Nachricht</label>
+                  <textarea
+                    name="message"
+                    id="message"
+                    placeholder="Wir möchten gerne für 19:15 einmal die „EL RANCHO“ Platte zum abholen bestellen."
+                  ></textarea>
+                </div>
+
+                <button type="submit" class="btn-form">Senden</button>
+              </form>
+            </div>
+            <div class="cta-img-box"></div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <p class="footer-text">
+          Developed by Vukitech. Copyright &copy; 2021 EL RANCHO Steakhaus.
+          <a
+            target="_blank"
+            href="https://www.instagram.com/steakhauselranchodueren/"
+            class="social-icon"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a
+            target="_blank"
+            href="https://www.facebook.com/darko.vukovic.5249"
+            class="social-icon"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
