Finished media queries.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./resources/css/general.css" />
     <link rel="stylesheet" href="./resources/css/layout.css" />
     <link rel="stylesheet" href="./resources/css/style.css" />
+    <link rel="stylesheet" href="./resources/css/queries.css" />
   </head>
   <body>
     <header class="header">
@@ -51,6 +52,11 @@
             <li><a href="#" class="main-nav-link">Impressum</a></li>
           </ul>
         </nav>
+
+        <button class="btn-mobile-nav">
+          <i class="fas fa-bars icon-mobile-nav bars-icon"></i>
+          <i class="fas fa-times icon-mobile-nav close-icon"></i>
+        </button>
       </div>
 
       <div class="header-text-box">
