Updated cta text.

--- a/index.html
+++ b/index.html
@@ -327,8 +327,9 @@
           <h2 class="heading-secondary">Wir sind für Sie da!</h2>
           <p class="description-text">
             Liebe Gäste, rufen Sie uns an oder schicken Sie uns eine E-mail wenn
-            Sie Tisch-Reservierung beantragen, oder Essen zum abholen bestellen
-            wollen. Tel: 0242113749. Email: info@elrancho-dueren.de.
+            Sie Tisch-Reservierung beantragen, oder Essen oder Gutscheine zum
+            abholen bestellen wollen. Tel: 0242113749. Email:
+            info@elrancho-dueren.de.
           </p>
         </div>
 
